docs: Update readme

--- a/stories/getting-started.stories.mdx
+++ b/stories/getting-started.stories.mdx
@@ -4,12 +4,10 @@ import { version } from '../package.json';
 <Meta title="Getting Started" />
 
 <h1>
-  @pbe/react-yandex-maps@<small>{version}</small>
+  @pbe/react-yandex-maps <small>v{version}</small>
 </h1>
 
-> Fork of [react-yandex-maps](https://github.com/gribnoysup/react-yandex-maps)
-
-`react-yandex-maps` is a wrapper around Yandex.Maps API that allows you to
+`@pbe/react-yandex-maps` is a wrapper around Yandex.Maps API that allows you to
 render Yandex Maps in your React application with minimum amount of hassle 🎉
 
 ## Getting Started
@@ -18,13 +16,7 @@ render Yandex Maps in your React application with minimum amount of hassle 🎉
 
 ### Installation
 
-To add the library to your project you can either use one of the CDN services
-
-```html
-<script src="https://unpkg.com/react-yandex-maps/dist/production/react-yandex-maps.umd.js"></script>
-```
-
-Or npm/yarn to install the library from npm registry:
+Use npm/yarn to install the library from npm registry:
 
 With npm:
 
