--- a/stories/faq.stories.mdx
+++ b/stories/faq.stories.mdx
@@ -10,7 +10,7 @@ import { Meta } from '@storybook/addon-docs';
 
 All basic Yandex.Maps API objects and controls are supported. All configuration
 options of those objects and all events are supported. For the list of supported
-items see ["What Is Supported?" section](/#what-is-supported)
+items see ["What Is Supported?" section](?path=/story/faq--page)
 
 ## Can I Render React DOM Components Into Yandex.Maps Balloons or Placemark Icons?
 
@@ -42,7 +42,7 @@ There are two ways to achieve this:
 - Use [`withYMaps` HOC][withymaps] and create your own custom component with
   full access to Yandex.Maps API as a prop.
 
-[withymaps]: /provider-consumer/with-ymaps-hoc
+[withymaps]: ?path=/story/api-withymaps--page
 
 ## How To Get Object Instance?
 
