--- a/stories/getting-started.stories.mdx
+++ b/stories/getting-started.stories.mdx
@@ -112,20 +112,19 @@ TrafficControl, TypeSelector, ZoomControl
 
 Rendering React DOM nodes to the Yandex.Maps template factories is not supported
 (i.e., you can't render balloon content with React with this library out of the
-box),
-[see FAQ](/faq#can-i-render-react-dom-components-into-yandexmaps-balloons-or-placemark-icons)
-for more info.
+box), [see FAQ](?path=/story/faq--page) for more info.
 
 ## Core Principles
 
-There are a few [core principles](/core-principles) that are forming the base of
-this library. It will be very helpful to keep those in mind, when you are using
-it.
+There are a few [core principles](?path=/story/core-principles--page) that are
+forming the base of this library. It will be very helpful to keep those in mind,
+when you are using it.
 
 - [Modular Approach][4.1]
 - [Controlled and Uncontrolled Components][4.2]
 - [React Context. Provider and Consumer Components][4.3]
 
-[4.1]: /core-principles#modular-approach
-[4.2]: /core-principles#controlled-and-uncontrolled-components
-[4.3]: /core-principles#react-context-provider-and-consumer-components
+[4.1]: ?path=/story/core-principles--page#modular-approach
+[4.2]: ?path=/story/core-principles--page#controlled-and-uncontrolled-components
+[4.3]:
+  ?path=/story/core-principles--page#react-context-provider-and-consumer-components
