--- a/stories/migration.stories.mdx
+++ b/stories/migration.stories.mdx
@@ -15,7 +15,7 @@ will also look at how to refactor your code for migration in different cases
 ## Yandex.Maps Modules Strict Defaults
 
 This library heavily utilizes Yandex.Maps module system, as covered in
-["Basic Principles: Modular Approach"](/basic-principles/modular-approach). That
+["Basic Principles: Modular Approach"](?path=/story/core-principles--page). That
 means that you don't get any control elements, balloons, hints or additional
 Yandex.Maps APIs right away. Instead, you need to specify what additional
 modules you need when you are working with Yandex.Maps.
