--- a/src/WithYMaps.stories.mdx
+++ b/src/WithYMaps.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Canvas } from '@storybook/addon-docs';
+import { Meta } from '@storybook/addon-docs';
 
 <Meta title="api/withYMaps" />
 
