feat: move src files to ts

--- a/src/geo-objects/Circle.stories.mdx
+++ b/src/geo-objects/Circle.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, ArgsTable } from '@storybook/addon-docs';
+import { Meta, Canvas, ArgsTable } from '@storybook/addon-docs';
 import { Circle as CircleCmp } from './Circle';
 import { YMaps, Map, Circle } from '../';
 
