--- a/src/geo-objects/Rectangle.stories.mdx
+++ b/src/geo-objects/Rectangle.stories.mdx
@@ -38,5 +38,5 @@ Renders Yandex.Maps API [Rectangle][docs] object
 
 <ArgsTable of={RectangleCmp} />
 
-[docs]
-https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Rectangle-docpage/
+[docs]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Rectangle-docpage/
