--- a/src/clusterization/ObjectManager.stories.mdx
+++ b/src/clusterization/ObjectManager.stories.mdx
@@ -1,5 +1,4 @@
-import { Meta, Canvas, ArgsTable } from '@storybook/addon-docs';
-import { ObjectManager as ObjectManagerCmp } from './ObjectManager';
+import { Meta, Canvas } from '@storybook/addon-docs';
 import { YMaps, Map, ObjectManager } from '../';
 import features from './__fixtures__/features';
 
@@ -41,10 +40,6 @@ Renders Yandex.Maps API [ObjectManager][docs]
     </Map>
   </YMaps>
 </Canvas>
-
-## Props
-
-<ArgsTable of={ObjectManagerCmp} />
 
 [docs]:
   https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.ObjectManager-docpage/
