--- a/src/geo-objects/GeoObject.stories.mdx
+++ b/src/geo-objects/GeoObject.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, ArgsTable } from '@storybook/addon-docs';
+import { Meta, Canvas, ArgsTable } from '@storybook/addon-docs';
 import { GeoObject as GeoObjectCmp } from './GeoObject';
 import { YMaps, Map, GeoObject } from '../';
 
