feat: with typing autogeneration

--- a/src/controls/ZoomControl.stories.mdx
+++ b/src/controls/ZoomControl.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, ArgsTable } from '@storybook/addon-docs';
+import { Meta, Canvas, ArgsTable } from '@storybook/addon-docs';
 import { ZoomControl as ZoomControlCmp } from './ZoomControl';
 import { YMaps, Map, ZoomControl } from '../';
 
