--- a/src/controls/ListBoxItem.stories.mdx
+++ b/src/controls/ListBoxItem.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, ArgsTable } from '@storybook/addon-docs';
+import { Meta, Canvas, ArgsTable } from '@storybook/addon-docs';
 import { ListBoxItem as ListBoxItemCmp } from './ListBoxItem';
 import { YMaps, Map, ListBox, ListBoxItem } from '../';
 
