--- a/src/controls/RulerControl.stories.mdx
+++ b/src/controls/RulerControl.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, ArgsTable } from '@storybook/addon-docs';
+import { Meta, Canvas, ArgsTable } from '@storybook/addon-docs';
 import { RulerControl as RulerControlCmp } from './RulerControl';
 import { YMaps, Map, RulerControl } from '../';
 
