--- a/src/geo-objects/Polygon.stories.mdx
+++ b/src/geo-objects/Polygon.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, ArgsTable } from '@storybook/addon-docs';
+import { Meta, Canvas, ArgsTable } from '@storybook/addon-docs';
 import { Polygon as PolygonCmp } from './Polygon';
 import { YMaps, Map, Polygon } from '../';
 
