--- a/website/docs/api-reference/03-panorama.mdx
+++ b/website/docs/api-reference/03-panorama.mdx
@@ -5,9 +5,9 @@ title: Panorama
 
 # Panorama
 
-Renders Yandex.Maps API [Panorama][panorama] object
+Создаёт объект Yandex.Maps API [Panorama][panorama]
 
-## Basic Usage
+## Использование
 
 ```jsx
 <YMaps>
@@ -25,14 +25,8 @@ Renders Yandex.Maps API [Panorama][panorama] object
 - `height`: Panorama container height. Default 240
 - `style`: Panorama container style
 - `className`: Panorama container className
+- `modules`: Yandex Maps modules
+- `instanceRef`: Object instance
 
-### Width And Height Props
-
-Yandex.Maps Panorama parent element should have at least some size set to it, otherwise the Panorama instance is
-rendered into the container with zero size.
-
-To avoid that, this library uses `width` and `height` props as default way of sizing the panorama element, but if the
-library user provides `style` or `className` prop, Panorama component will assume that the Panorama instance is sized by
-those props and will not use `width` and `height` props
-
-[panorama]: https://tech.yandex.ru/maps/doc/jsapi/2.1/ref/reference/panorama.Player-docpage/
+[panorama]:
+  https://tech.yandex.ru/maps/doc/jsapi/2.1/ref/reference/panorama.Player-docpage/
