--- a/website/docs/api-reference/controls/geolocation-control.mdx
+++ b/website/docs/api-reference/controls/geolocation-control.mdx
@@ -7,9 +7,9 @@ import { Canvas } from '@site/src/components/Canvas';
 
 # GeolocationControl
 
-Renders Yandex.Maps API [GeolocationControl][control] control
+Создает объект Yandex.Maps API [GeolocationControl][control]
 
-## Basic Usage
+## Использование
 
 <Canvas>
   {`
@@ -35,5 +35,7 @@ Renders Yandex.Maps API [GeolocationControl][control] control
 - `defaultOptions`: Uncontrolled control options
 - `state`: Control state
 - `defaultState`: Uncontrolled control state
+- `instanceRef`: Object instance
 
-[control]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.GeolocationControl-docpage/
+[control]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.GeolocationControl-docpage/
