--- a/website/docs/api-reference/geo-objects/polygon.mdx
+++ b/website/docs/api-reference/geo-objects/polygon.mdx
@@ -7,9 +7,9 @@ import { Canvas } from '@site/src/components/Canvas';
 
 # Polygon
 
-Renders Yandex.Maps API [Polygon][docs] object
+Создает объект Yandex.Maps API [Polygon][docs]
 
-## Basic Usage
+## Использование
 
 <Canvas>
   {`
@@ -56,6 +56,9 @@ Renders Yandex.Maps API [Polygon][docs] object
 - `defaultProperties`: Uncontrolled Placemark properties
 - `options`: Placemark options
 - `defaultOptions`: Uncontrolled Placemark options
-- `dangerZone`: Used in a special case where constructor needs to be modified before passing it to the mount method
+- `dangerZone`: Used in a special case where constructor needs to be modified
+  before passing it to the mount method
+- `instanceRef`: Object instance
 
-[docs]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Polygon-docpage/
+[docs]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Polygon-docpage/
