--- a/website/docs/01-getting-started.mdx
+++ b/website/docs/01-getting-started.mdx
@@ -1,39 +1,40 @@
 ---
 slug: '/'
-description: Yandex.Maps API bindings for React
-title: Getting Started
+description: Обертка Яндекс.Карт для React
+title: Быстрый старт
 ---
 
 <head>
   <title>React Yandex Maps</title>
 </head>
 
-`@pbe/react-yandex-maps` is a wrapper around Yandex.Maps API that allows you to render Yandex Maps in your React
-application with minimum amount of hassle 🎉
+`@pbe/react-yandex-maps` — это обертка для API Яндекс.Карт, которая позволяет
+отображать карты Яндекса в вашем React приложении с минимальными усилиями 🎉
 
-## Installation
+## Установка
 
-Use npm/yarn to install the library from npm registry:
+Используйте npm/yarn для установки библиотеки из npm:
 
-With npm:
+Через npm:
 
 ```bash
 npm install --save @pbe/react-yandex-maps
 ```
 
-With yarn:
+Через yarn:
 
 ```bash
 yarn add @pbe/react-yandex-maps
 ```
 
-### Adding Maps to Your Application
+## Добавляем карту в приложение
 
-Adding maps to your application can be splitted in two steps.
+Добавление карт в приложение можно разделить на два этапа.
 
-First, we will add provider component, that will handle loading the Yandex.Maps API and providing it to any interested
-component on the page. Usually you don't want to have several providers on one page. A good place to put your provider
-could the at the top of your application:
+Во-первых, мы добавим компонент провайдера, который будет обрабатывать загрузку
+API Яндекс.Карт и предоставлять его любому интересующему компоненту на странице.
+Обычно вы не хотите иметь несколько провайдеров на одной странице. Хорошее место
+для размещения вашего провайдера, может быть в верхней части вашего приложения:
 
 ```jsx
 import { YMaps } from '@pbe/react-yandex-maps';
@@ -45,7 +46,7 @@ const App = () => (
 );
 ```
 
-Then add the Map component with desired state somewhere on the page:
+Затем добавьте компонент `Map` с желаемым состоянием где-нибудь на странице:
 
 ```jsx
 import { YMaps, Map } from '@pbe/react-yandex-maps';
@@ -60,58 +61,50 @@ const App = () => (
 );
 ```
 
-That's it! Now, as soon as Yandex.Maps API is loaded by `YMaps` provider component, `Map` component will render
-`ymaps.Map` object on the page.
+Вот и все! Теперь, как только API Яндекс.Карт загружается `YMaps` компонентом
+провайдера, `Map` компонент будет отображать `ymaps.Map` объект на странице.
 
-Before you start playing around with the library I higly recommend taking a quick look at the "What is supported?"
-section and a more thorough look at "Basic Principles" section
+Прежде чем вы начнете экспериментировать с библиотекой, я настоятельно
+рекомендую быстро просмотреть раздел "Что поддерживается?" и "Основные принципы"
 
-## What Is Supported?
+## Что поддерживается?
 
-This library is a thin wrapper over Yandex.Maps API, a lot of Yandex.Maps API objects and features are supported with
-React components but not all of them and not all of their features.
+Эта библиотека представляет собой тонкую обертку над API Яндекс.Карт, многие
+объекты и функции API Яндекс.Карт поддерживаются компонентами React, но не все и
+не все их возможности.
 
-Here is a list of supported features and objects:
+### Поддерживаемые возсожности
 
-### Supported Features
+- Изменение запроса API Яндекс.Карт через `YMaps` компонент провайдера
+- Получение доступа к API Яндекс.Карт в ваших компонентах через `withYMaps` HOC
+- Точечная загрузка необходимых модулей API с API модулей Яндекс.Карт
+- Контролируемые и неконтролируемые компоненты для каждого поддерживаемого
+  объекта
+- Корпоративный API через `YMaps` `query` проп
 
-- Modifying Yandex.Maps API request via `YMaps` provider component
-- Getting access to Yandex.Maps API in your components via `withYMaps` HOC
-- Granular load of the required API modules with Yandex.Maps modules API
-- Controlled and uncontrolled components for every supported object
-- Enterprise API via `YMaps` `query` prop
+Контролируемые компоненты не 100% контролируемые, так как нет возможностей
+остановить обновление объектов Яндекс.Карты. Поэтому, при использовании
+контролируемых компонентов, вы должны держать в голове, что
+`state/properties/options` и объекты Яндекс.Карты могут быть не
+синхронизированны.
 
-Controlled props that are mentioned above are not 100% controlled as there is no way to stop Yandex. Map objects from
-updating completely with the library API. When using controlled props, you should keep in mind that your
-state/properties/options and Yandex.Maps object state/properties/options could go out of sync.
-
-### Supported Yandex. Map Objects
+### MapObjects
 
 Map, Panorama
 
-### Supported GeoObjects
+### GeoObjects
 
-`GeoObject`, `Placemark`, `Polyline`, `Rectangle`, `Polygon`, `Circle`, `Clusterer`, `ObjectManager`
+GeoObject, Placemark, Polyline, Rectangle, Polygon, Circle, Clusterer,
+ObjectManager
 
-### Supported Controls
+### Controls
 
-`Button`, `FullscreenControl`, `GeolocationControl`, `ListBox`, `ListBoxItem`, `RouteButton`, `RouteEditor`,
-`RoutePanel`, `RulerControl`, `SearchControl`, `TrafficControl`, `TypeSelector`, `ZoomControl`
+Button, FullscreenControl, GeolocationControl, ListBox, ListBoxItem,
+RouteButton, RouteEditor, RoutePanel, RulerControl, SearchControl,
+TrafficControl, TypeSelector, ZoomControl
 
-## What Is Not Supported?
+## Что не поддерживается?
 
-Rendering React DOM nodes to the Yandex.Maps template factories is not supported (i.e., you can't render balloon content
-with React with this library out of the box), [see FAQ](/faq) for more info.
-
-## Core Principles
-
-There are a few [core principles](/core-principles) that are forming the base of this library. It will be very helpful
-to keep those in mind, when you are using it.
-
-- [Modular Approach][4.1]
-- [Controlled and Uncontrolled Components][4.2]
-- [React Context. Provider and Consumer Components][4.3]
-
-[4.1]: /core-principles/#modular-approach
-[4.2]: /core-principles/#controlled-and-uncontrolled-components
-[4.3]: /core-principles/#react-context-provider-and-consumer-components
+Отрисовка React DOM нод для Яндекс.Карты фабрики шаблонов, не поддерживается
+(т.е. вы не можете визуализировать содержимое балуна с помощью этой библиотеки),
+[смотри FAQ](/faq) для больше информации.
