--- a/website/docs/api-reference/04-useymaps.mdx
+++ b/website/docs/api-reference/04-useymaps.mdx
@@ -5,22 +5,24 @@ title: useYMaps
 
 # useYMaps
 
-Return Yandex.Maps API instance
+Возвращает объект API Яндекс.Карты
 
-## Basic Usage
+## Использование
 
 ```jsx
 const ymaps = useYMaps(modules);
 ```
 
-## Parameters
+## Параметры хука
 
-- `modules`: list of modules to be loaded. For example: _Map_, _Placemark_, _etc._
+### modules
 
-## Example
+Cписок модулей которые будут загружены. Например: _Map_, _Placemark_, _etc._
+
+Пример использования:
 
 ```jsx
-export const CustomMap = () => {
+export default function App() {
   const mapRef = useRef(null);
   const ymaps = useYMaps(['Map']);
 
@@ -28,6 +30,7 @@ export const CustomMap = () => {
     if (!ymaps || !mapRef.current) {
       return;
     }
+
     new ymaps.Map(mapRef.current, {
       center: [55.76, 37.64],
       zoom: 10,
@@ -35,5 +38,5 @@ export const CustomMap = () => {
   }, [ymaps]);
 
   return <div ref={mapRef} style={{ width: '320px', height: '240px' }} />;
-};
+}
 ```
