--- a/website/docs/api-reference/controls/route-editor.mdx
+++ b/website/docs/api-reference/controls/route-editor.mdx
@@ -7,9 +7,9 @@ import { Canvas } from '@site/src/components/Canvas';
 
 # RouteEditor
 
-Renders Yandex.Maps API [RouteEditor][control] control
+Создает объект Yandex.Maps API [RouteEditor][control]
 
-## Basic Usage
+## Использование
 
 <Canvas>
   {`
@@ -35,5 +35,7 @@ Renders Yandex.Maps API [RouteEditor][control] control
 - `defaultOptions`: Uncontrolled control options
 - `state`: Control state
 - `defaultState`: Uncontrolled control state
+- `instanceRef`: Object instance
 
-[control]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.RouteEditor-docpage/
+[control]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.RouteEditor-docpage/
