--- a/website/docs/api-reference/geo-objects/polyline.mdx
+++ b/website/docs/api-reference/geo-objects/polyline.mdx
@@ -7,9 +7,9 @@ import { Canvas } from '@site/src/components/Canvas';
 
 # Polyline
 
-Renders Yandex.Maps API [Polyline][docs] object
+Создает объект Yandex.Maps API [Polyline][docs]
 
-## Basic Usage
+## Использование
 
 <Canvas>
   {`
@@ -47,6 +47,9 @@ Renders Yandex.Maps API [Polyline][docs] object
 - `defaultProperties`: Uncontrolled Placemark properties
 - `options`: Placemark options
 - `defaultOptions`: Uncontrolled Placemark options
-- `dangerZone`: Used in a special case where constructor needs to be modified before passing it to the mount method
+- `dangerZone`: Used in a special case where constructor needs to be modified
+  before passing it to the mount method
+- `instanceRef`: Object instance
 
-[docs]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Polyline-docpage/
+[docs]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Polyline-docpage/
