feat: partial russian support

--- a/website/docs/api-reference/clusterization/object-manager.mdx
+++ b/website/docs/api-reference/clusterization/object-manager.mdx
@@ -8,9 +8,9 @@ import objectManagerFeatures from '@site/src/mocks/object-manager-features';
 
 # ObjectManager
 
-Renders Yandex.Maps API [ObjectManager][docs]
+Создает объект Yandex.Maps API [ObjectManager][docs]
 
-## Basic Usage
+## Использование
 
 <Canvas scope={{ objectManagerFeatures }}>
   {`
@@ -50,4 +50,5 @@ Renders Yandex.Maps API [ObjectManager][docs]
 - `options`: Clusterer options
 - `defaultOptions`: Uncontrolled Clusterer options
 
-[docs]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.ObjectManager-docpage/
+[docs]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.ObjectManager-docpage/
