--- a/website/docs/api-reference/geo-objects/circle.mdx
+++ b/website/docs/api-reference/geo-objects/circle.mdx
@@ -7,9 +7,9 @@ import { Canvas } from '@site/src/components/Canvas';
 
 # Circle
 
-Renders Yandex.Maps API [Circle][docs] object
+Создает объект Yandex.Maps API [Circle][docs]
 
-## Basic Usage
+## Использование
 
 <Canvas>
   {`
@@ -38,6 +38,7 @@ Renders Yandex.Maps API [Circle][docs] object
 - `defaultProperties`: Uncontrolled circle properties
 - `options`: Circle options
 - `defaultOptions`: Uncontrolled circle options
-- `dangerZone`: Used in a special case where constructor needs to be modified before passing it to the mount method
+- `dangerZone`: Used in a special case where constructor needs to be modified
+  before passing it to the mount method
 
 [docs]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Circle-docpage/
