--- a/website/docs/api-reference/geo-objects/geo-object.mdx
+++ b/website/docs/api-reference/geo-objects/geo-object.mdx
@@ -7,9 +7,9 @@ import { Canvas } from '@site/src/components/Canvas';
 
 # GeoObject
 
-Renders Yandex.Maps API [GeoObject][docs] object
+Создает объект Yandex.Maps API [GeoObject][docs]
 
-## Basic Usage
+## Использование
 
 <Canvas>
   {`
@@ -47,6 +47,8 @@ Renders Yandex.Maps API [GeoObject][docs] object
 - `defaultProperties`: Uncontrolled circle properties
 - `options`: Circle options
 - `defaultOptions`: Uncontrolled circle options
-- `dangerZone`: Used in a special case where constructor needs to be modified before passing it to the mount method
+- `dangerZone`: Used in a special case where constructor needs to be modified
+  before passing it to the mount method
 
-[docs]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/GeoObject-docpage/
+[docs]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/GeoObject-docpage/
