--- a/website/docs/api-reference/geo-objects/placemark.mdx
+++ b/website/docs/api-reference/geo-objects/placemark.mdx
@@ -7,9 +7,9 @@ import { Canvas } from '@site/src/components/Canvas';
 
 # Placemark
 
-Renders Yandex.Maps API [Placemark][docs] object
+Создает объект Yandex.Maps API [Placemark][docs]
 
-## Basic Usage
+## Использование
 
 <Canvas>
   {`
@@ -34,6 +34,8 @@ Renders Yandex.Maps API [Placemark][docs] object
 - `defaultProperties`: Uncontrolled Placemark properties
 - `options`: Placemark options
 - `defaultOptions`: Uncontrolled Placemark options
-- `dangerZone`: Used in a special case where constructor needs to be modified before passing it to the mount method
+- `dangerZone`: Used in a special case where constructor needs to be modified
+  before passing it to the mount method
 
-[docs]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Placemark-docpage/
+[docs]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Placemark-docpage/
