--- a/website/docs/api-reference/clusterization/clusterer.mdx
+++ b/website/docs/api-reference/clusterization/clusterer.mdx
@@ -8,9 +8,9 @@ import clusterPoints from '@site/src/mocks/clusterer-points';
 
 # Clusterer
 
-Renders Yandex.Maps API [Clusterer][docs]
+Создает объект Yandex.Maps API [Clusterer][docs]
 
-## Basic Usage
+## Использование
 
 <Canvas scope={{ clusterPoints }}>
   {`
@@ -41,4 +41,5 @@ Renders Yandex.Maps API [Clusterer][docs]
 - `options`: Clusterer options
 - `defaultOptions`: Uncontrolled Clusterer options
 
-[docs]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Clusterer-docpage/
+[docs]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Clusterer-docpage/
