--- a/website/docs/api-reference/controls/listbox.mdx
+++ b/website/docs/api-reference/controls/listbox.mdx
@@ -7,9 +7,9 @@ import { Canvas } from '@site/src/components/Canvas';
 
 # ListBox
 
-Renders Yandex.Maps API [ListBox][control] control
+Создает объект Yandex.Maps API [ListBox][control]
 
-## Basic Usage
+## Использование
 
 <Canvas>
   {`
@@ -43,4 +43,5 @@ Renders Yandex.Maps API [ListBox][control] control
 - `state`: Control state
 - `defaultState`: Uncontrolled control state
 
-[control]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.ListBox-docpage/
+[control]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.ListBox-docpage/
