--- a/website/docs/api-reference/controls/route-button.mdx
+++ b/website/docs/api-reference/controls/route-button.mdx
@@ -7,9 +7,9 @@ import { Canvas } from '@site/src/components/Canvas';
 
 # RouteButton
 
-Renders Yandex.Maps API [RouteButton][control] control
+Создает объект Yandex.Maps API [RouteButton][control]
 
-## Basic Usage
+## Использование
 
 <Canvas>
   {`
@@ -34,4 +34,5 @@ Renders Yandex.Maps API [RouteButton][control] control
 - `state`: Control state
 - `defaultState`: Uncontrolled control state
 
-[control]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.RouteButton-docpage/
+[control]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.RouteButton-docpage/
