--- a/website/docs/api-reference/controls/route-panel.mdx
+++ b/website/docs/api-reference/controls/route-panel.mdx
@@ -7,9 +7,9 @@ import { Canvas } from '@site/src/components/Canvas';
 
 # RoutePanel
 
-Renders Yandex.Maps API [RoutePanel][control] control
+Создает объект Yandex.Maps API [RoutePanel][control]
 
-## Basic Usage
+## Использование
 
 <Canvas>
   {`
@@ -34,4 +34,5 @@ Renders Yandex.Maps API [RoutePanel][control] control
 - `state`: Control state
 - `defaultState`: Uncontrolled control state
 
-[control]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.RoutePanel-docpage/
+[control]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.RoutePanel-docpage/
