--- a/website/docs/api-reference/controls/search-control.mdx
+++ b/website/docs/api-reference/controls/search-control.mdx
@@ -7,9 +7,9 @@ import { Canvas } from '@site/src/components/Canvas';
 
 # SearchControl
 
-Renders Yandex.Maps API [SearchControl][control] control
+Создает объект Yandex.Maps API [SearchControl][control]
 
-## Basic Usage
+## Использование
 
 <Canvas>
   {`
@@ -36,4 +36,5 @@ Renders Yandex.Maps API [SearchControl][control] control
 - `state`: Control state
 - `defaultState`: Uncontrolled control state
 
-[control]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.SearchControl-docpage/
+[control]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/control.SearchControl-docpage/
