--- a/website/docs/api-reference/geo-objects/rectangle.mdx
+++ b/website/docs/api-reference/geo-objects/rectangle.mdx
@@ -7,9 +7,9 @@ import { Canvas } from '@site/src/components/Canvas';
 
 # Rectangle
 
-Renders Yandex.Maps API [Rectangle][docs] object
+Создает объект Yandex.Maps API [Rectangle][docs]
 
-## Basic Usage
+## Использование
 
 <Canvas>
   {`
@@ -45,6 +45,8 @@ Renders Yandex.Maps API [Rectangle][docs] object
 - `defaultProperties`: Uncontrolled Placemark properties
 - `options`: Placemark options
 - `defaultOptions`: Uncontrolled Placemark options
-- `dangerZone`: Used in a special case where constructor needs to be modified before passing it to the mount method
+- `dangerZone`: Used in a special case where constructor needs to be modified
+  before passing it to the mount method
 
-[docs]: https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Rectangle-docpage/
+[docs]:
+  https://tech.yandex.com/maps/doc/jsapi/2.1/ref/reference/Rectangle-docpage/
