--- a/website/docs/01-getting-started.mdx
+++ b/website/docs/01-getting-started.mdx
@@ -73,7 +73,7 @@ const App = () => (
 объекты и функции API Яндекс.Карт поддерживаются компонентами React, но не все и
 не все их возможности.
 
-### Поддерживаемые возсожности
+### Поддерживаемые возможности
 
 - Изменение запроса API Яндекс.Карт через `YMaps` компонент провайдера
 - Получение доступа к API Яндекс.Карт в ваших компонентах через `withYMaps` HOC
