--- a/website/docs/02-core-principles.mdx
+++ b/website/docs/02-core-principles.mdx
@@ -152,7 +152,7 @@ system][5.3.1] и [API loading parameters][5.3.2] в документации н
 [5.3.2]:
   https://tech.yandex.com/maps/doc/jsapi/2.1/dg/concepts/load-docpage/#param
 
-## Контролируемы и Неконтролируемые компоненты
+## Контролируемые и Неконтролируемые компоненты
 
 Важный шаблон React, о котором следует помнить при использовании этой
 библиотеки, — это контролируемые и неуправляемые компоненты. Этот шаблон
